--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "mdb-react-ui-kit": "^1.4.0",
     "mdb-ui-kit": "^3.9.0",
     "mdbreact": "5.1.0",
     "react-router-dom": "^5.1.2",
